organizer/postgresql.yml
apiVersion: v1
kind: Service
metadata:
  name: organizer-db-service
spec:
  type: ClusterIP
  selector:
    app: organizer-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizer-db-deployment
  labels:
    app: organizer-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organizer-db
  template:
    metadata:
      name: organizer-db
      labels:
        app: organizer-db
    spec:
      volumes:
        - name: organizer-pv-storage
          persistentVolumeClaim:
            claimName: organizer-pv-claim
      containers:
        - name: organizer-db
          image: zago0/organizer-postgres:1.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql"
              name: organizer-pv-storage
