organizer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-organizer-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: organizer.zagoapps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: organizer-server
                port:
                  number: 80
  tls:
    - hosts:
        - organizer.zagoapps.com
      secretName: organizer-server-tls
